# euler_rs

./: Cargo.toml
src/: alpha.rs  bigint.rs  bitarray.rs  cached_iterator.rs  fibonacci.rs  grid.rs  lib.rs  lookup_iterator.rs  math.rs  permutation.rs  prime_factors.rs  primes.rs  pythagorus.rs  triangle.rs
src/cards/: mod.rs  suit.rs  value.rs
src/cards/poker/: mod.rs  rank.rs
src/factors/: mod.rs  prime_factors.rs
src/generators/: champernownes_constant.rs  collatz.rs  consecutive_prime_sum.rs  fibonacci.rs  hexagonal_numbers.rs  mod.rs  pandigital_numbers.rs  pentagonal_numbers.rs  primes.rs  quadratic_formula.rs  spiral_diagonal_numbers.rs  triangle_numbers.rs
src/generators/digit_replacement/: digit_replacement.rs  digit_replacement_pattern.rs  mod.rs
src/math/: fraction.rs  mod.rs  proper_divisors.rs
