[package]
name = "euler_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.19", features = ["derive"] }
itertools = "0.10.5"
num-bigint = "0.4.3"
phf = { version = "0.11.1", features = ["macros"] }
