[package]
name = "euler_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
phf = { version = "0.13.1", features = ["macros"] }
